plugins {
  id 'war'
  id 'org.gretty' version '2.3.1'
  id 'com.bmuschko.cargo' version '2.6.1'
  id 'org.sonarqube' version '2.7.1'
  id 'jacoco'
  id 'net.ltgt.errorprone' version '0.8.1'
 // id "org.springframework.boot" version "2.1.8.RELEASE"

}

group 'by.epam'
version '1.0-SNAPSHOT'
processResources {
  doLast {
    new File(sourceSets.main.output.resourcesDir, 'application.properties').text =
      """version=$version
buildDate=${System.currentTimeMillis()}
"""
  }
}
sourceCompatibility = 11
targetCompatibility = 11

repositories {
  mavenCentral()
  jcenter()
}

dependencies {
  // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
  providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'

  // https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api
  providedCompile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.3'

  // https://mvnrepository.com/artifact/javax.servlet/jstl
  compile group: 'javax.servlet', name: 'jstl', version: '1.2'

  // https://mvnrepository.com/artifact/javax.mail/javax.mail-api
  compile group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
  // https://mvnrepository.com/artifact/com.sun.mail/javax.mail
  compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'

  // https://mvnrepository.com/artifact/javax.validation/validation-api
  compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'

  // https://mvnrepository.com/artifact/org.postgresql/postgresql
  compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
  // https://mvnrepository.com/artifact/org.mindrot/jbcrypt
  compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
  //https://mvnrepository.com/artifact/org.mockito/mockito-core/2.27.0
  testCompile group: 'org.mockito', name: 'mockito-core', version: '2.27.0'
  // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
  // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
  //https://mvnrepository.com/artifact/org.yaml/snakeyaml/1.24
  compile group: 'org.yaml', name: 'snakeyaml', version: '1.24'
  //https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api/2.12.1
  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
 //https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core/2.12.1
  compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
  // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl
  compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.12.1'
  //https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind/2.9.8
  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
  //https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml/2.9.8
  compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.8'
  //https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305/3.0.2
  compile 'com.google.code.findbugs:jsr305:3.0.2'

  // https://mvnrepository.com/artifact/com.google.errorprone/error_prone_core
  compile group: 'com.google.errorprone', name: 'error_prone_core', version: '2.3.3'

  // https://mvnrepository.com/artifact/org.testcontainers/postgresql
  testCompile group: 'org.testcontainers', name: 'postgresql', version: '1.12.1'

  // https://mvnrepository.com/artifact/org.springframework/spring-context
  compile group: 'org.springframework', name: 'spring-context', version: '5.1.9.RELEASE'

// https://mvnrepository.com/artifact/org.springframework/spring-jdbc
  compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.9.RELEASE'

// https://mvnrepository.com/artifact/com.mchange/c3p0
  compile group: 'com.mchange', name: 'c3p0', version: '0.9.5.4'

  // https://mvnrepository.com/artifact/com.zaxxer/HikariCP
  compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.0'


//  // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
//  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.8.RELEASE'
//// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
//  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.8.RELEASE'

}

gretty {
  servletContainer = 'tomcat9'
  contextPath = '/'
//database data
  initParameter('jdbcDriver', 'jdbc:postgresql://localhost:5432/coursiradb?user=coursirauser&charSet=UNICODE')
  initParameter('dbPoolSize', '5')
  initParameter('sessionLoginDurationHours', '10')
  initParameter('sessionAnonymousDurationHours', '1')
//smtp data
  initParameter('gmailPassword', System.getenv("GMAIL_PASSWORD"))
  initParameter('gmailAddress', System.getenv("GMAIL_ADDRESS"))
  initParameter('mail.smtp.host', 'smtp.gmail.com')
  initParameter('mail.smtp.port', '587')
  initParameter('mail.smtp.auth', 'true')
  initParameter('mail.smtp.starttls.enable', 'true')

  initParameter('paginationLimit', '3')
  initParameter('cleanerInitialDelay', '0')
  initParameter('cleanerDelay', '1')
}

cargo {
  containerId = 'tomcat9x'
  port = 8080

  deployable {
    context = 'coursira'
  }

  remote {
    hostname = 'localhost'
    username = System.getenv("TOMCAT_ADMIN")
    password = System.getenv("TOMCAT_PASSWORD")
  }

}

sonarqube {
  properties {
    property('sonar.host.url', 'http://localhost:9000')
    property('sonar.login', System.getenv("SONARQUBE_LOGIN"))

  }
}

test {
  useJUnitPlatform()
}

wrapper {
  gradleVersion = '5.4.1'
}
